# compl-math-lab-3

./: CMakeLists.txt
src/: main.cpp
src/methods/: IMethod.h  RectangleMethod.cpp  RectangleMethod.h  SimpsonMethod.cpp  SimpsonMethod.h  TrapezoidMethod.cpp  TrapezoidMethod.h
src/utils/: Validator.cpp  Validator.h
